# phosyRenderer

./: CMakeLists.txt  README.md  makefile
lib/lodepng/: CMakeLists.txt
src/: camera.cc  camera.h  dielectric.cc  dielectric.h  hit_record.h  hittable.h  hittable_list.cc  hittable_list.h  lambertian.cc  lambertian.h  logger.cc  logger.h  main.cc  material.h  metal.cc  metal.h  ray.h  renderer.cc  renderer.h  sphere.cc  sphere.h  vector_3d.cc  vector_3d.h
